[project]
name = "KrylovSubspaceLibrary"
version = "0.1.0"
description = "Krylov subspace-based optimization methods for AI model training.
authors = [
    { name = "Austin M. McBurney", email = "austinmcb.cs@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12",
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/austinmcb/KrylovSubspaceLibrary"
Issues = "https://github.com/austinmcb/KrylovSubspaceLibrary/issues"

[project.scripts]
krylov-train = "KrylovSubspaceLibrary.cli.train:main"

[build-system]
requires = ["setuptools">=61.0, "wheel"]
build-backend = "setuptools.build_meta"